styles.css
body{
    background-color:rgba(61, 8, 123, 1);
}
div{
    border-radius: 5px;
}
.maincontainer{
    display:flex;
    flex-wrap: wrap;
    background-color:rgba(61, 8, 123, 1);
     justify-content:space-around; 
    gap:100px;
    padding: 5px;
    /* height: 100vh; */
}
.container1{
    display:flex;
    flex-direction: column;
    gap:20px;
  
}
label{
    margin-left:20px ;
}
 select{ 
    padding: 5px;
    width: 200px;
    margin-left: 100px;
} 
.timecard{
    padding: 10px;
    background-color:white;
    /* line-height: 40px; */
}
.g_morning{
    padding:10px;
    font-size:20px;
    font-weight: bolder;
   background-color: #9140B5; 
   color: white;
   
}
.parent{
    display:flex;
   gap: 10px;

} 

.setalarm{
    background-image: linear-gradient(to right, #8E53F0,#F25CFE);
    color: white;
    text-align: center;
    width:200px;
    height: 20px;
    padding:10px;
}
.setalarm:hover{
    background-image: linear-gradient(to right,#F25CFE , #8E53F0);
    content: "hello";
}
.all_timings{
  
    background-color: #9140B5; 
    color: #FC5EFF;
}
ul{
    list-style-type: none;
    margin-right: 20px;
}
.container2{
    display: flex;
    flex-direction: column;
    gap: 20px;
    align-content: center;
}
.time{
   
    align-items: center;
    padding:13px;
    background-color: white;
    display: flex;
    justify-content: space-around;
    gap:10px;
    /* position:absolute; */
    z-index: 9;
}
.cbox{
    width: 400px;
}
.box{
 padding: 5px; 
 text-align: center;
 height: 35px;
 width: 35px;  
 font-weight:bolder ;
}
.b1 {
    color: #8A11BF;
    background-image:url("./timeline.svg");
}
.b2 {
    color: #8A11BF;
    background-image:url("./timeline.svg");
}
.b3 {
    color: #8A11BF;
    background-image:url("./timeline.svg");
}
.b4{
    background-image: url("./AM_svg.svg");
    color: white;
    font-size: x-larger;

}
.tbox{
    height:50px;
    
 width: 380px;
    opacity:0.71;
    background-color:azure;
    z-index: 5;
    margin-top: -60px;
    margin-left: 25px;
    /* position:absolute;
    top: 45px;
    left: 670px; */
    
}
.tbox2{
    height:50px;
    width: 340px;
   
    opacity:0.22;
    background-color:#FC5EFF;
    z-index: 4;
    margin-top: -60px;
    margin-left: 38px;
    /* position:absolute;
    top: 50px;
    left: 680px; */
    
    
}
/* table{
    border: 2px solid black;
    
} */

.grab{
   /* width: 400px; */
    margin-top: 20px;
    padding:20px;
    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
    font-size:20px;
    font-weight: bolder;
    color: #8E53F0;
    background-color: rgba(255, 255, 255, 0.89);
}
.image1{
background-color: white;
background-image: url("./Component\ 30\ –\ 1.svg");
background-size:contain;
background-position: center;
background-repeat: no-repeat;
height:220px;
   padding: 20px; 
}
.lunch_img{
    background-color: white;
background-image: url("./Component\ 31\ –\ 1.svg");
background-size:contain;
background-position: center;
background-repeat: no-repeat;
height:220px;
   padding: 20px; 
}
.nap_img{
    background-color: white;
background-image: url("./lunch_image.png");
background-size:contain;
background-position: center;
background-repeat: no-repeat;
height:220px;
   padding: 20px; 
}
.night_img{
    background-color: white;
background-image: url("./goodnight_image.svg");
background-size:contain;
background-position: center;
background-repeat: no-repeat;
height:220px;
   padding: 20px; 
}
@media screen and (max-width:500px) {
    select{ 
        margin-left: 30px;
    } 
    .tbox{
        width: 312px;
        margin-left: 18px;
        /* position: absolute;
        top: 640px;
        left: 29px; */
        
    }
    .tbox2{
         width: 290px;
         margin-left:22px ;
         /* position: absolute;
         top: 645px;
         left: 41px; */
    }
    .cbox{
        width:auto;
    }
}

